# barcode-sampling-bias

./: .pre-commit-config.yaml  README.md  app.json  pyproject.toml  todo.md
.github/workflows/: docs.yml
myapp/: app.py  simulation.py
