[tool.pdm]
[tool.pdm.scripts]
export = "shinylive export myapp site"
serve = "python3 -m http.server --directory site --bind localhost 8008"
dev = "shiny run --reload --launch-browser myapp/app.py"

[tool.pdm.dev-dependencies]
dev = [
    "shiny>=0.3.3",
    "shinylive>=0.0.13",
    "ruff>=0.0.263",
    "black>=23.3.0",
]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Daylin Morgan", email = "daylinmorgan@gmail.com"},
]
dependencies = [
    "pandas>=2.0.1",
    "matplotlib>=3.7.1",
    "numpy>=1.24.3",
    "jupyter>=1.0.0",
]
requires-python = ">=3.10"
license = {text = "MIT"}
